created why choose us section on home page responsives

--- a/index.html
+++ b/index.html
@@ -177,6 +177,100 @@
 
     <!-- END HERO SECTION -->
 
+    <!-- BEGIN WHY CHOOSE US SECTION -->
+
+
+    <section class="choose">
+
+
+        <div class="container">
+
+            <div class="row">
+
+                <h2>Why Choose Us</h2>
+
+                <div class="boxes">
+
+                    <div class="box">
+
+                        <div class="icon">
+
+                            <img src="./assets/images/svg/develop_11211584.svg" alt="">
+
+                        </div>
+
+
+                        <div class="content">
+
+                            <h3>Expertise in Cutting-Edge Solutions</h3>
+
+                            <p>Experienced team delivering tailored, future-ready IT solutions to keep your business ahead.</p>
+
+
+                            <div class="btn">
+                            <a class="request" href="#">Learn More</a>
+                        </div>
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="box">
+
+                        <div class="icon">
+
+                            <img src="./assets/images/svg/influence_8549232.svg" alt="">
+
+                        </div>
+
+
+                        <div class="content">
+
+                            <h3>Client-Centered Approach</h3>
+
+                            <p>Clients come first. We provide personalized solutions and clear communication.</p>
+
+                            <div class="btn">
+                                <a class="request" href="#">Learn More</a>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="box">
+
+                        <div class="icon">
+
+                            <img src="./assets/images/svg/laptop-repair_17770712.svg" alt="">
+                        </div>
+
+
+                        <div class="content">
+
+                            <h3>Reliable Support and Maintenance</h3>
+
+                            <p>We provide ongoing support and updates to ensure your systems run smoothly and efficiently.</p>
+
+                            <div class="btn">
+                                <a class="request" href="#">Learn More</a>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- END WHY CHOOSE US SECTION -->
 
 
     <!-- BEGIN BOOTSTRAP JS -->
