tab created with interaction responsives

--- a/index.html
+++ b/index.html
@@ -273,6 +273,167 @@
     <!-- END WHY CHOOSE US SECTION -->
 
 
+    <!-- BEGIN THIRD SECTION -->
+
+    <section class="third-sec">
+
+        <div class="container">
+
+            <div class="row">
+
+                <h2>We specialize in all kinds of technology development</h2>
+                <p>At our company, we specialize in comprehensive technology development tailored to meet diverse needs. From innovative software solutions to cutting-edge hardware design, our expert team leverages the latest advancements to deliver high-quality products and services. We are dedicated to helping businesses harness technology to drive growth, efficiency, and success in today's competitive landscape.</p>
+
+            </div>
+
+            <div class="tabs">
+
+                <div class="tabs-main">
+
+                <div class="tab-heading1" onclick="openTab(event, 'Tab1')">
+
+                    <div class="icon">
+
+                        <img src="./assets/images/svg/wordpres.svg" alt="">
+
+                    </div>
+                    Wordpress
+                </div>
+
+
+                <div class="tab-heading2" onclick="openTab(event, 'Tab2')">
+
+                    <div class="icon">
+
+                        <img src="./assets/images/svg/html.svg" alt="">
+
+                    </div>
+                    Custom Website
+                </div>
+
+
+                <div class="tab-heading3" onclick="openTab(event, 'Tab3')">
+
+                    <div class="icon">
+
+                        <img src="./assets/images/svg/seo.svg" alt="">
+
+                    </div>
+
+                    SEO Optimization
+
+                </div>
+
+            </div>
+
+            </div>
+
+            <div id="Tab1" class="tab-content">
+
+                <div class="left">
+
+                    <img src="./assets/images/jpg/empowering innovation transforming ideas into reality.jpg" alt="">
+
+                </div>
+
+                <div class="right">
+
+                    <h2>We are working with 3 years expereience in Wordpress</h2>
+
+                    <p>With three years of hands-on experience in WordPress development and management, our team specializes in creating and maintaining dynamic websites that meet diverse client needs. Our expertise encompasses a wide range of services, ensuring that every project is tailored for optimal performance and user engagement.
+
+                    </p>
+                    <ul>
+                        <li>Tailored designs that reflect your brand identity and enhance user experience.</li>
+
+                        <li>Custom plugins to extend functionality and streamline website operations.</li>
+
+                        <li>Regular updates, backups, and troubleshooting to ensure your site runs smoothly.</li>
+                    </ul>
+
+
+                    <div class="btn">
+                        <a class="request" href="#">Learn More</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div id="Tab2" class="tab-content" style="display:none;">
+
+                <div class="left">
+
+                    <img src="./assets/images/jpg/empowering innovation transforming ideas into reality.jpg" alt="">
+
+                </div>
+
+                <div class="right">
+
+                    <h2>Custom Website Development
+                    </h2>
+
+                    <p>Creating a tailored online presence that reflects your brand and meets your specific needs is essential in today's digital landscape. Our custom website development services provide a unique solution that enhances user experience, boosts engagement, and drives conversions.</p>
+                    <ul>
+                        <li>Ensuring your website looks great and functions seamlessly on all devices.</li>
+
+                        <li>Implementing user-friendly CMS for easy content updates and management.</li>
+
+                        <li>Incorporating best practices to improve your website's visibility on search engines.</li>
+                    </ul>
+
+
+                    <div class="btn">
+                        <a class="request" href="#">Learn More</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div id="Tab3" class="tab-content" style="display:none;">
+
+                <div class="left">
+
+                    <img src="./assets/images/jpg/empowering innovation transforming ideas into reality.jpg" alt="">
+
+                </div>
+
+                <div class="right">
+
+                    <h2>SEO Optimization</h2>
+
+                    <p>Search Engine Optimization (SEO) is a critical component of digital marketing that enhances your website's visibility in search engine results. By optimizing your site for relevant keywords and improving user experience, you can attract more organic traffic and increase your online presence.</p>
+                    <ul>
+                        <li>Identifying the most effective keywords and phrases that your target audience is searching for.</li>
+
+                        <li>Enhancing website elements like titles, meta descriptions, headers, and content to improve relevance and ranking.</li>
+
+                        <li>REnsuring your website is technically sound, including site speed, mobile-friendliness, and proper indexing.</li>
+
+                        <li>Developing high-quality, engaging content that provides value to users and encourages sharing.</li>
+
+                        <li>Establishing a strong backlink profile through outreach and partnerships to boost authority and ranking.</li>
+
+
+                    </ul>
+
+
+                    <div class="btn">
+                        <a class="request" href="#">Learn More</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <!-- END THIRD SECTION -->
+
     <!-- BEGIN BOOTSTRAP JS -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
