tab content area images changed

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
                 <div class="left">
 
-                    <img src="./assets/images/jpg/empowering innovation transforming ideas into reality.jpg" alt="">
+                    <img src="./assets/images/jpg/wordpress development.png" alt="">
 
                 </div>
 
@@ -364,7 +364,7 @@
 
                 <div class="left">
 
-                    <img src="./assets/images/jpg/empowering innovation transforming ideas into reality.jpg" alt="">
+                    <img src="./assets/images/jpg/custom web development.png" alt="">
 
                 </div>
 
@@ -395,7 +395,7 @@
 
                 <div class="left">
 
-                    <img src="./assets/images/jpg/empowering innovation transforming ideas into reality.jpg" alt="">
+                    <img src="./assets/images/jpg/SEO optimization.png" alt="">
 
                 </div>
 
