services section created with responsives

--- a/index.html
+++ b/index.html
@@ -434,6 +434,100 @@
 
     <!-- END THIRD SECTION -->
 
+
+    <!-- BEGIN FOURTH SECTION -->
+
+    <section class="services">
+
+        <div class="container">
+
+            <div class="row1">
+
+                <span>What We Do</span>
+
+                <h2>Our Services Provided</h2>
+
+            </div>
+
+            <div class="services-box">
+
+                <!-- this is service box 1 -->
+
+                <div class="box">
+
+                    <img src="./assets/images/jpg/custom web development.png" alt="">
+
+                    <div class="cta">
+
+                        <h3>Custom Websites</h3>
+
+                        
+                        <p>create unique, responsive, and user-friendly websites</p>
+
+                        <div class="btn">
+                            <a class="request" href="#">Learn More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- this is service box 1 End -->
+
+                <!-- this is service box 2 -->
+
+                <div class="box">
+
+                    <img src="./assets/images/jpg/wordpress services.jpg" alt="">
+
+                    <div class="cta">
+
+                        <h3>Wordpress Websites</h3>
+
+                        <p>responsive site builds using Elementor Pro</p>
+
+                        <div class="btn">
+                            <a class="request" href="#">Learn More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- this is service box 2 End -->
+
+
+                <!-- this is service box 3 -->
+
+                <div class="box">
+
+                    <img src="./assets/images/jpg/SEO services.jpg" alt="">
+
+                    <div class="cta">
+
+                        <h3>SEO</h3>
+
+                        <p>boost online visibility through keyword optimization</p>
+
+                        <div class="btn">
+                            <a class="request" href="#">Learn More</a>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- this is service box 3 End -->
+
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!-- END FOURTH SECTION -->
+
     <!-- BEGIN BOOTSTRAP JS -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
