pricing section created responsives

--- a/index.html
+++ b/index.html
@@ -528,6 +528,115 @@
 
     <!-- END FOURTH SECTION -->
 
+
+    <!-- BEGIN PRICE SECTION -->
+
+    <section class="price">
+
+        <div class="container">
+
+            <div class="row1">
+
+                <h2>Access Any Service at Affordable Prices</h2>
+
+            </div>
+
+            <div class="row2">
+
+                <!-- FIRST PRICE BOX -->
+
+                <div class="pricebox" id="pricebox1">
+
+
+                    <h3>Wordpress</h3>
+                    <div class="priceline">
+                    <span class="price">$200</span>
+                    <span>/per website</span>
+                </div>
+
+                    <ul>
+                        <li>Create Unique Websites</li>
+
+                        <li> Automate Your Busy Work</li>
+
+                        <li> Optimize All Your Efforts</li>
+
+                        <li>Create Unique Websites</li>
+
+                        <li>Create Unique Websites</li>
+
+                    </ul>
+
+                    <a class="request" href="#">Learn More</a>
+
+                </div>
+
+                <!-- SECOND PRICE BOX -->
+
+                <div class="pricebox" id="pricebox2">
+
+
+                    <h3>Custom Website</h3>
+                    <div class="priceline">
+                    <span class="price">$500</span>
+                    <span>/per website</span>
+                </div>
+
+                    <ul>
+                        <li>Create Unique Websites</li>
+
+                        <li> Automate Your Busy Work</li>
+
+                        <li> Optimize All Your Efforts</li>
+
+                        <li>Create Unique Websites</li>
+
+                        <li>Create Unique Websites</li>
+
+                    </ul>
+
+                    <a class="request" href="#">Learn More</a>
+
+                </div>
+
+                  <!-- THIRD PRICE BOX -->
+
+                  <div class="pricebox hide" id="pricebox1">
+
+
+                    <h3>SEO</h3>
+                    <div class="priceline">
+                    <span class="price">$300</span>
+                    <span>/per website</span>
+                </div>
+
+                    <ul>
+                        <li>Create Unique Websites</li>
+
+                        <li> Automate Your Busy Work</li>
+
+                        <li> Optimize All Your Efforts</li>
+
+                        <li>Create Unique Websites</li>
+
+                        <li>Create Unique Websites</li>
+
+                    </ul>
+
+                    <a class="request" href="#">Learn More</a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        </div>
+
+    </section>
+
+    <!-- END PRICE SECTION -->
+
     <!-- BEGIN BOOTSTRAP JS -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
